# haskell-boggle

./: Boggle.cabal  README.md  stdboard1.in
src/: Boggle.hs
