name:                Boggle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ryanpbrewster/haskell/tree/master/Boggle
license:             BSD3
author:              Ian Tay
maintainer:          yiyantay@gmail.com
copyright:           2017 Ian Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Boggle
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryanpbrewster/haskell/tree/master/Boggle
